--- a/TODO
+++ b/TODO
@@ -19,16 +19,15 @@
 - (x) replicate example to paper
 - (-) open app -> focus on 8/9 fields -> content is not moving <- fabric specific? paper works like a charm
 - (-) const {update} = useReanimatedFocusedInput(); <- change signature of the method in advance? requires REA3
+- (-) enable hook under feature flag? <- Ivan promised to test it
+- (x) test paper/fabric iOS/Android
+- (-) crash on every file changes AwareScrollView/hot reload <- only if body of worklet changed? fabric specific?
+- (-) `y` on Android and from measure are different <- works identical to iOS (on iOS `y` is not `0` too)
+- (-) android: keyboard resize pushes content significantly <- not happening anymore
+- (x) paper: focus on 5, unfocus -> no back transition <- keyboardHeight back to `0` too early (should be in end handler) <- focusWasChanged was true on tag === -1
+- (-) sometimes `paddingBottom` is getting kind of freezed (i. e. keyboard is hidden, but padding is still present) <- fabric specific?
+- (x) 8 -> 9 transitions (9 field is covered by keyboard) <- not enough to scroll (scrollTo to not existing position):: added paddingTop as contentStyle and changed marginTop to marginBottom
+- (x) focus on 3, then on 5 -> grow text input -> first grow scroll into incorrect position <- Android specific :: position.value += maybeScroll(...);
+- (x) remove all println/console.log/TODO/etc.
 - scrollResponderScrollNativeHandleToKeyboard
 - think about renaming FocusedInputLayoutChangedObserver -> FocusedInputObserver
-- 
-- crash on every file changes AwareScrollView/hot reload <- only if body of worklet changed? fabric specific?
-- enable hook under feature flag?
-- test paper/fabric iOS/Android
-- 8 -> 9 transitions (9 field is covered by keyboard)
-- android: keyboard resize pushes content significantly
-- sometimes `paddingBottom` is getting kind of freezed (i. e. keyboard is hidden, but padding is still present)
-- `y` on Android and from measure are different
-- focus on 3, then on 5 -> grow text input -> first grow scroll into incorrect position
-- remove all println/console.log/TODO/etc.
-- paper: focus on 5, unfocus -> no back transition <- keyboardHeight back to `0` too early (should be in end handler)
