--- a/docs/blog/2023-11-03-new-features-achieved-milestones/index.mdx
+++ b/docs/blog/2023-11-03-new-features-achieved-milestones/index.mdx
@@ -1,12 +1,14 @@
 ---
-slug: new-features
-title: Introducing the New Features in react-native-keyboard-controller
+slug: new-features-achieved-milestones
+title: New release, new features, achieved milestones
 authors: [kirill]
-tags: [react-native, keyboard, new hook, sticky view]
+tags: [react-native, keyboard, new hook, sticky view, achieved milestones]
 keywords: [react-native-keyboard-controller, keyboard, keyboard sticky view, sticky view, KeyboardStickyView, focused input, focused input layout, useReanimatedFocusedInput]
 ---
 
-# Introducing the New Features in react-native-keyboard-controller
+In this blog post I'd like to make an overview of new features available in `1.9.0` as well as going through the big milestones that were achieved 😎
+
+## Introducing the New Features in react-native-keyboard-controller
 
 I'm excited to announce the latest release of `react-native-keyboard-controller`! This update brings two powerful new features to help you manage the keyboard behavior in your React Native applications. Whether you're building a simple form or a complex UI, these additions will make your life easier 😎
 
@@ -18,8 +20,6 @@ import lottie from '../../docs/api/components/keyboard-sticky-view/ksv.lottie.js
 </div>
 
 <!-- truncate -->
-
-## The features of this release
 
 ### `KeyboardStickyView`
 
@@ -45,7 +45,47 @@ The new `useReanimatedFocusedInput` hook 😎. This hook eliminates the need for
 
 With `useReanimatedFocusedInput`, I've created a more streamlined and versatile solution to meet your needs.
 
-## Enhance Your React Native App Today
+## Achieved milestones
+
+### 🎉 Celebrating 1000 Stars: A Heartfelt Thank You to Our Incredible Community 🌟
+
+The `react-native-keyboard-controller` has reached an incredible milestone - **1000** stars! 🚀 This achievement wouldn't have been possible without the unwavering support and contributions from amazing community of developers and enthusiasts.
+
+I want to take a moment to express my deepest gratitude to each and every one of you who has been a part of this journey. Your support, engagement, and feedback have played a crucial role in shaping this project and making it what it is today.
+
+Thank You for:
+
+🙌 **Star Power**: Your stars show your endorsement and appreciation for my work. Each star represents a vote of confidence and encouragement.
+
+💬 **Engaging Feedback**: Your questions, suggestions, and issues have helped me improve the library and make it more robust. Your thoughtful feedback is invaluable.
+
+👩‍💻 **Contributions**: Many of you have contributed your time and expertise to enhance the project. Your code, documentation updates, and bug reports have been a driving force behind my progress.
+
+🌐 **Spreading the Word**: Sharing the project within your networks has helped me grow and reach a wider audience. Your support has a ripple effect.
+
+🤝 Community Spirit: Your active participation in discussions, forums, and events related to the library creates a sense of unity and shared purpose.
+
+### 📈 8.000 weekly downloads on npm
+
+While **8.000** weekly downloads on npm is undoubtedly a milestone to celebrate, I want to take a moment to express my heartfelt appreciation to every single user of `react-native-keyboard-controller`. Whether you've been with us from the beginning or you've just started using the library, your trust and support mean a lot for me.
+
+It's not about the size of the number; it's about the impact each one of you makes in your own unique way. Every user is an integral part of the growing community, contributing to the success and development of the project. Your feedback, your questions, your ideas, and your trust are what keep me inspired and motivated!
+
+So, thank you. Thank you for choosing `react-native-keyboard-controller` for your applications. Your faith in the library drives me to continually improve, innovate, and provide you with the best tools for your React Native projects.
+
+### Special Thank You ❤️
+
+Especially I want to make a huge shoot out to:
+
+- [Hirbod](https://github.com/hirbod) for your sponsoring, promotion, contributions and early library adoption 😎
+- [Ivan](https://github.com/IvanIhnatsiuk) for your ideas, help and early adoption of this library 💪
+- [Ksu](https://github.com/ksugaevskaya) for your help and mental support on every step of this library creation, I appreciate it ❤️
+- [Marcelo T Prado](https://github.com/MarceloPrado) for your sponsoring, active participation in issue resolution, contributions, and fresh ideas 🚀
+- [Abed El Rahman Al Tawil](https://github.com/mrtawil) for your sponsoring and active involvement in addressing issues 👍
+
+Your support and collaboration have strengthened the community and enriched the project. I couldn't have come this far without you. Thank you for believing in the mission and helping me create a better environment for React Native development.
+
+## Instead of summary
 
 The latest features in `react-native-keyboard-controller` are designed to simplify keyboard interactions and add visual appeal to your React Native applications. Whether you need to ensure your content remains visible when the keyboard is active or want to create stunning animations, this update has got you covered.
 
@@ -53,4 +93,6 @@ To get started, update your package to the latest version of `react-native-keybo
 
 I look forward to hearing your feedback and suggestions. Feel free to reach out to me or create GitHub [issues](https://github.com/kirillzyusko/react-native-keyboard-controller/issues). Happy coding!
 
-Stay tuned for future updates and releases as I continue to enhance the `react-native-keyboard-controller` library. Follow me on [Twitter](https://twitter.com/ziusko) and [GitHub](https://github.com/kirillzyusko) for updates. Thank you for your support! 😊
+Stay tuned for future updates and releases as I continue to enhance the `react-native-keyboard-controller` library. Follow me on [Twitter](https://twitter.com/ziusko) and [GitHub](https://github.com/kirillzyusko) for updates. Your support means the world to me, and if you're interested in taking our collaboration to the next level, consider sponsoring me on GitHub 😊
+
+Thank you for being part of our community and for your continued support! 🚀
