refactor: changes after self review

--- a/docs/blog/2023-11-03-new-features-achieved-milestones/index.mdx
+++ b/docs/blog/2023-11-03-new-features-achieved-milestones/index.mdx
@@ -67,7 +67,7 @@ Thank You for:
 
 ### 📈 8.000 weekly downloads on npm
 
-While **8.000** weekly downloads on npm is undoubtedly a milestone to celebrate, I want to take a moment to express my heartfelt appreciation to every single user of `react-native-keyboard-controller`. Whether you've been with us from the beginning or you've just started using the library, your trust and support mean a lot for me.
+While **8.000** weekly downloads on npm is undoubtedly a milestone to celebrate, I want to take a moment to express my heartfelt appreciation to every single user of `react-native-keyboard-controller`. Whether you've been with me from the beginning or you've just started using the library, your trust and support mean a lot for me.
 
 It's not about the size of the number; it's about the impact each one of you makes in your own unique way. Every user is an integral part of the growing community, contributing to the success and development of the project. Your feedback, your questions, your ideas, and your trust are what keep me inspired and motivated!
 
@@ -79,7 +79,7 @@ Especially I want to make a huge shoot out to:
 
 - [Hirbod](https://github.com/hirbod) for your sponsoring, promotion, contributions and early library adoption 😎
 - [Ivan](https://github.com/IvanIhnatsiuk) for your ideas, help and early adoption of this library 💪
-- [Ksu](https://github.com/ksugaevskaya) for your help and mental support on every step of this library creation, I appreciate it ❤️
+- [Ksu](https://github.com/ksugaevskaya) for your sponsoring, help and mental support on every step of this library creation, I appreciate it ❤️
 - [Marcelo T Prado](https://github.com/MarceloPrado) for your sponsoring, active participation in issue resolution, contributions, and fresh ideas 🚀
 - [Abed El Rahman Al Tawil](https://github.com/mrtawil) for your sponsoring and active involvement in addressing issues 👍
 
@@ -91,8 +91,8 @@ The latest features in `react-native-keyboard-controller` are designed to simpli
 
 To get started, update your package to the latest version of `react-native-keyboard-controller`, and dive into the documentation to see these features in action.
 
-I look forward to hearing your feedback and suggestions. Feel free to reach out to me or create GitHub [issues](https://github.com/kirillzyusko/react-native-keyboard-controller/issues). Happy coding!
+I look forward to hearing your feedback and suggestions. Feel free to reach out to me or create GitHub [issues](https://github.com/kirillzyusko/react-native-keyboard-controller/issues) or [discussions](https://github.com/kirillzyusko/react-native-keyboard-controller/discussions). Happy coding!
 
-Stay tuned for future updates and releases as I continue to enhance the `react-native-keyboard-controller` library. Follow me on [Twitter](https://twitter.com/ziusko) and [GitHub](https://github.com/kirillzyusko) for updates. Your support means the world to me, and if you're interested in taking our collaboration to the next level, consider sponsoring me on GitHub 😊
+Stay tuned for future updates and releases as I continue to enhance the `react-native-keyboard-controller` library. Follow me on [Twitter](https://twitter.com/ziusko) and [GitHub](https://github.com/kirillzyusko) for updates. Your support means the world to me, and if you're interested in taking our collaboration to the next level, consider [sponsoring](https://github.com/sponsors/kirillzyusko) me on GitHub 😊
 
 Thank you for being part of our community and for your continued support! 🚀
