docs: ignore lottie animations

--- a/docs/blog/2023-08-25-enhanced-metadata/index.mdx
+++ b/docs/blog/2023-08-25-enhanced-metadata/index.mdx
@@ -12,7 +12,7 @@ import Lottie from 'lottie-react';
 import lottie from '../../src/components/HomepageFeatures/text-inputs.lottie.json';
 
 <div style={{ display: 'flex', justifyContent: 'center', marginBottom: 20 }}>
-<Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
+<Lottie className="lottie" animationData={lottie} style={{ width: 400, height: 400 }} loop />
 </div>
 
 **Say goodbye to guesswork and hello to precision!** React Native Keyboard Controller `1.6.0` introduces a trio of new fields in the event metadata that will revolutionize the way you manage keyboard interactions in your React Native applications 😎
