--- a/docs/blog/2023-04-10-interactive-keyboard/index.mdx
+++ b/docs/blog/2023-04-10-interactive-keyboard/index.mdx
@@ -12,7 +12,7 @@ import Lottie from 'lottie-react';
 import lottie from '../../src/components/HomepageFeatures/interactive.lottie.json';
 
 <div style={{ display: 'flex', justifyContent: 'center', marginBottom: 20 }}>
-<Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
+<Lottie className="lottie" animationData={lottie} style={{ width: 400, height: 400 }} loop />
 </div>
 
 <!--truncate-->
