--- a/docs/blog/2023-11-01-new-features-achieved-milestones/index.mdx
+++ b/docs/blog/2023-11-01-new-features-achieved-milestones/index.mdx
@@ -16,7 +16,7 @@ import Lottie from 'lottie-react';
 import lottie from '../../docs/api/components/keyboard-sticky-view/ksv.lottie.json';
 
 <div style={{ display: 'flex', justifyContent: 'center', marginBottom: 20 }}>
-<Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
+<Lottie className="lottie" animationData={lottie} style={{ width: 400, height: 400 }} loop />
 </div>
 
 <!-- truncate -->
