--- a/docs/docs/installation.mdx
+++ b/docs/docs/installation.mdx
@@ -4,17 +4,31 @@ description: Guide dedicated to installation process
 keywords: [react-native-keyboard-controller, react-native keyboard, installation, setup, keyboard handling, keyboard animation, keyboard movement, troubleshooting]
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 # Installation
 
 ## Adding a library to the project
 
 Install the `react-native-keyboard-controller` package in your React Native project.
 
-```bash
+<Tabs>
+<TabItem value="yarn" label="YARN" default>
+
+```shell
 yarn add react-native-keyboard-controller
-# or with npm
-# npm install react-native-keyboard-controller --save
 ```
+
+</TabItem>
+<TabItem value="npm" label="NPM">
+
+```shell
+npm install react-native-keyboard-controller --save
+```
+
+</TabItem>
+</Tabs>
 
 ### Linking
 
