refactor: clean up

--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -25,17 +25,15 @@ import lottie from '../../../src/components/HomepageFeatures/text-inputs.lottie.
 |JS implementation|❌|✅|❌|🟠 <sup><small>2</small></sup>|
 |Reacts on focused input layout changes|❌|❌|✅|✅|
 |Reacts on focus changes|✅|✅|✅|✅|
-|AutoScroll when user types and input in non visible area|❌|❌|?|🟠 <sup><small>3</small></sup>|
+|AutoScroll when user types and input in non visible area|❌|❌|?|✅|
 |Android support|✅|✅|❌|✅|
 |Maintained|✅|❌|✅|✅|
-|Support Fabric (new) architecture|✅|🟠 <sup><small>4</small></sup>|❌|✅|
+|Support Fabric (new) architecture|✅|🟠 <sup><small>3</small></sup>|❌|✅|
 
-> <sup>1</sup> respects <b>only</b> on <b>iOS</b>
+> <sup>1</sup> <b>only</b> on <b>iOS</b>
 
-> <sup>2</sup> <code>KeyboardAwareScrollViewView</code> is implemented in JS, but some hooks (<code>useKeyboardHandler</code> and <code>useReanimatedFocusedInput</code>) exposed from native code
+> <sup>2</sup> <code>KeyboardAwareScrollView</code> is implemented in JS, but some hooks (<code>useKeyboardHandler</code> and <code>useReanimatedFocusedInput</code>) exposed from native code
 
-> <sup>3</sup> not implemented yet, but planned 😉
-
-> <sup>4</sup> since it's JS based solution it supports new architecture, but it uses <b>deprecated</b> API.
+> <sup>3</sup> since it's JS based solution it supports new architecture, but it uses <b>deprecated</b> API.
 
 - sticky footer support?
