--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -11,29 +11,98 @@ import lottie from '../../../src/components/HomepageFeatures/text-inputs.lottie.
 <Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
 </div>
 
+`ScrollView` that effortlessly handles keyboard appearance, automatically scrolls to focused `TextInput` and provides a native-like performance.
+
 ## Comparison
 
-### Agenda
+Current `react-native` ecosystem has a plenty of solutions that 
 
-- ✅ - Yes
-- ❌ - No
-- 🟠 - Partially/with some restrictions/conditionally
-
-||react-native-avoid-soft-input|react-native-keyboard-aware-scroll-view|react-native-keyboard-manager|react-native-keyboard-controller|
+||[react-native-avoid-soft-input](https://mateusz1913.github.io/react-native-avoid-softinput/)|[react-native-keyboard-aware-scroll-view](https://github.com/APSL/react-native-keyboard-aware-scroll-view)|[react-native-keyboard-manager](https://github.com/douglasjunior/react-native-keyboard-manager)|[react-native-keyboard-controller](./keyboard-aware-scroll-view.mdx)|
 |-----|-----|-----|-----|-----|
 |Respects keyboard animation|🟠 <sup><small>1</small></sup>|❌|✅|✅|
 |JS implementation|❌|✅|❌|🟠 <sup><small>2</small></sup>|
-|Reacts on focused input layout changes|❌|❌|✅|✅|
+|Reacts on focused input layout changes|❌|❌|🟠 <sup><small>3</small></sup>|✅|
 |Reacts on focus changes|✅|✅|✅|✅|
-|AutoScroll when user types and input in non visible area|❌|❌|?|✅|
+|Auto-scroll when user is typing and input in non visible area|❌|❌|🟠 <sup><small>3</small></sup>|✅|
 |Android support|✅|✅|❌|✅|
 |Maintained|✅|❌|✅|✅|
-|Support Fabric (new) architecture|✅|🟠 <sup><small>3</small></sup>|❌|✅|
+|Support Fabric (new) architecture|✅|🟠 <sup><small>4</small></sup>|❌|✅|
 
 > <sup>1</sup> <b>only</b> on <b>iOS</b>
 
-> <sup>2</sup> <code>KeyboardAwareScrollView</code> is implemented in JS, but some hooks (<code>useKeyboardHandler</code> and <code>useReanimatedFocusedInput</code>) exposed from native code
+> <sup>2</sup> <code>KeyboardAwareScrollView</code> is implemented in JS, but some hooks (<code>useKeyboardHandler</code>/<code>useReanimatedFocusedInput</code>/<code>useFocusedInputHandler</code>) exposed from native code
 
-> <sup>3</sup> since it's JS based solution it supports new architecture, but it uses <b>deprecated</b> API.
+> <sup>3</sup> achievable with <code>KeyboardManager.reloadLayoutIfNeeded()</code> usage in appropriate <code>TextInput</code> callbacks (<code>onLayout</code>/<code>onChangeText</code>)
 
-- sticky footer support?
+> <sup>4</sup> since it's JS based solution it supports new architecture, but it uses <b>deprecated</b> API.
+
+## Props
+
+### ScrollView Props
+
+Inherits [ScrollView Props](https://reactnative.dev/docs/scrollview#props).
+
+### `bottomOffset`
+
+The distance between keyboard and focused `TextInput` when keyboard is shown.
+
+## Example
+
+```tsx
+import React from 'react';
+import { StyleSheet, TextInputProps, TextInput as TextInputRN } from 'react-native';
+import { KeyboardAwareScrollView } from 'react-native-keyboard-controller';
+
+const TextInput = (props: TextInputProps) => {
+  return (
+    <TextInputRN
+      placeholderTextColor="#6c6c6c"
+      style={styles.textInput}
+      multiline
+      numberOfLines={2}
+      testID={props.placeholder}
+      {...props}
+      placeholder={`${props.placeholder} (${props.keyboardType === 'default' ? 'text' : 'numeric'})`}
+    />
+  );
+};
+
+export default function AwareScrollView() {
+  return (
+    <KeyboardAwareScrollView
+      bottomOffset={50}
+      style={styles.container}
+      contentContainerStyle={styles.content}
+    >
+      {new Array(10).fill(0).map((_, i) => (
+        <TextInput
+          key={i}
+          placeholder={`TextInput#${i}`}
+          keyboardType={i % 2 === 0 ? 'numeric' : 'default'}
+        />
+      ))}
+    </KeyboardAwareScrollView>
+  );
+}
+
+const styles = StyleSheet.create({
+  container: {
+    paddingHorizontal: 16,
+  },
+  content: {
+    paddingTop: 50,
+  },
+  textInput: {
+    width: '100%',
+    minHeight: 50,
+    maxHeight: 200,
+    marginBottom: 50,
+    borderColor: 'black',
+    borderWidth: 2,
+    marginRight: 160,
+    borderRadius: 10,
+    color: 'black',
+    paddingHorizontal: 12,
+  },
+});
+```
