docs: update wordings

--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -15,7 +15,9 @@ import lottie from '../../../src/components/HomepageFeatures/text-inputs.lottie.
 
 ## Comparison
 
-Current `react-native` ecosystem has a plenty of solutions that 
+Current `react-native` ecosystem has a plenty of solutions that solves the problem of focused inputs being covered by keyboard. Each of them has its own advantages and disadvantages.
+
+Below is a table with the most important functions and their support in various implementations:
 
 ||[react-native-avoid-soft-input](https://mateusz1913.github.io/react-native-avoid-softinput/)|[react-native-keyboard-aware-scroll-view](https://github.com/APSL/react-native-keyboard-aware-scroll-view)|[react-native-keyboard-manager](https://github.com/douglasjunior/react-native-keyboard-manager)|[react-native-keyboard-controller](./keyboard-aware-scroll-view.mdx)|
 |-----|-----|-----|-----|-----|
