--- a/docs/versioned_docs/version-1.10.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.10.0/api/components/keyboard-aware-scroll-view.mdx
@@ -5,7 +5,7 @@ keywords: [react-native-keyboard-controller, KeyboardAwareScrollView, keyboard a
 # KeyboardAwareScrollView
 
 import Lottie from 'lottie-react';
-import lottie from '../../../src/components/HomepageFeatures/text-inputs.lottie.json';
+import lottie from '@site/src/components/HomepageFeatures/text-inputs.lottie.json';
 
 <div style={{ display: 'flex', justifyContent: 'center', marginBottom: 20 }}>
 <Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
