--- a/docs/versioned_docs/version-1.10.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.10.0/api/components/keyboard-aware-scroll-view.mdx
@@ -14,7 +14,12 @@ import Lottie from "lottie-react";
 import lottie from "@site/src/components/HomepageFeatures/text-inputs.lottie.json";
 
 <div style={{ display: "flex", justifyContent: "center", marginBottom: 20 }}>
-  <Lottie animationData={lottie} style={{ width: 400, height: 400 }} loop />
+  <Lottie
+    className="lottie"
+    animationData={lottie}
+    style={{ width: 400, height: 400 }}
+    loop
+  />
 </div>
 
 `ScrollView` that effortlessly handles keyboard appearance, automatically scrolls to focused `TextInput` and provides a native-like performance.
