chore: updated todo list

--- a/TODO
+++ b/TODO
@@ -7,3 +7,9 @@
 - [ ] setFocusTo("current") -> like AutoFill contacts in iOS (hide and open keyboard)
 - [ ] set focus to custom input (date picker) - how it should be done? Test on iOS?
 - [ ] unit tests for iOS/Android
+- [ ] accessibility
+- [ ] animations
+- [ ] customization
+- [ ] dark theme
+- [ ] on iOS when you go from down to top - birthday inputs (2) are skipped
+- [ ] e2e tests
