--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -30,6 +30,13 @@ import toolbar from "./toolbar.lottie.json";
   />
 </div>
 
+## Features
+
+- fully customizable UI 🎨
+- supports dark/light theme 🌓
+- extended accessibility support ♿️
+- full control over the buttons behavior 🔧
+
 ## Props
 
 ### `renderContent`
