--- a/docs/versioned_docs/version-1.10.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.10.0/api/components/keyboard-aware-scroll-view.mdx
@@ -65,7 +65,11 @@ Inherits [ScrollView Props](https://reactnative.dev/docs/scrollview#props).
 
 ### `bottomOffset`
 
-The distance between keyboard and focused `TextInput` when keyboard is shown.
+The distance between keyboard and focused `TextInput` when keyboard is shown. Default is `0`.
+
+### `disableScrollOnKeyboardHide`
+
+Prevents automatic scrolling of the `ScrollView` when the keyboard gets hidden, maintaining the current screen position. Default is `false`.
 
 ## Example
 
