feat: AutoFill Contacts example

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -42,3 +42,8 @@ import toolbar from "./toolbar.lottie.json";
 ### `renderContent`
 
 ## Example
+
+## Limitations
+
+- find all fields within ViewController/FragmentActivity
+- order of navigation is defined by view hierarchy (i. e. view-tree)
