fix: iOS bug with non-working setFocusTo("next") after keyboard being dismissed

--- a/TODO
+++ b/TODO
@@ -24,7 +24,7 @@ Major problems (for opening PR):
 - (x) disable/enable buttons (how to propagate events/ animated transitions)
 - (x) e2e tests
 - (x) disable/enable buttons on Android
-- handle setFocusTo("next") when we select a contact (iOS)
+- (x) handle setFocusTo("next") when we select a contact (iOS)
 - write last e2e tests (interaction with AutoFill contacts, conditional rendering)
 - on Android buttons disabling/enabling looks tooo slow - test on a real device + capture performance benchmarks (how much time it takes to go from JS -> native -> JS)
 - enhanced example app
