docs: update documentation

--- a/docs/docs/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/docs/api/components/keyboard-aware-scroll-view.mdx
@@ -71,6 +71,10 @@ The distance between keyboard and focused `TextInput` when keyboard is shown. De
 
 Prevents automatic scrolling of the `ScrollView` when the keyboard gets hidden, maintaining the current screen position. Default is `false`.
 
+### `enabled`
+
+A boolean prop indicating whether `KeyboardAwareScrollView` is enabled or disabled. Default is `true`.
+
 ## Example
 
 ```tsx
