chore: changes after review

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -32,10 +32,10 @@ import toolbar from "./toolbar.lottie.json";
 
 ## Features
 
-- fully customizable UI 🎨
-- supports dark/light theme 🌓
-- extended accessibility support ♿️
-- full control over the buttons behavior 🔧
+- Fully customizable UI 🎨: Tailor the appearance of the toolbar to match your app's design.
+- Supports dark/light theme 🌓: Adapts to the theme settings of the user's device for a seamless experience.
+- Extended accessibility support 🔍: Ensures that all users, including those with disabilities, can navigate through inputs effectively.
+- Full control over the buttons behavior 🔧: Customize the actions triggered by the next, previous, and done buttons according to your needs.
 
 ## Props
 
