--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@
 - [ ] an ability to customize text/arrow elements
 - [ ] last input disabled
 - [ ] more effective way for gathering all inputs on screen (now it finds a lot of duplicates)
+- [ ] arrow + ripple effect - incorrect positioning
 - [-] unit tests for Android
 
 Major problems (for opening PR):
