--- a/TODO
+++ b/TODO
@@ -12,12 +12,12 @@
 - [x] hasNext/hasPrev (or current/total)?
 - [x] e2e tests
 - [x] reduce `useColorScheme() || "light";` code duplication
+- [x] an ability to customize arrow/text color
 - [ ] set focus to custom input (date picker) - how it should be done? Test on iOS?
 - [ ] unit tests for iOS
 - [ ] customization
 - [ ] memo/callbacks everywhere
 - [ ] improve accessibility (arrows should react on bold/fontSize changes)
-- [ ] an ability to customize arrow/text color
 - [ ] an ability to customize text/arrow elements
 - [ ] last input disabled
 - [ ] more effective way for gathering all inputs on screen (now it finds a lot of duplicates)
