--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -39,11 +39,47 @@ import toolbar from "./toolbar.lottie.json";
 
 ## Props
 
-### `renderContent`
+### `Content`
+
+This property allows you to show a custom content in the middle of the toolbar. It accepts JSX element. Default value is `null`.
+
+```tsx
+<KeyboardToolbar
+  Content={
+    showAutoFill ? (
+      <AutoFillContacts onContactSelected={onContactSelected} />
+    ) : null
+  }
+/>
+```
+
+### `theme`
+
+Prop allowing you to specify the brand colors of your application for `KeyboardToolbar` component. If you want to re-use already platform specific colors you can import `DefaultKeyboardToolbarTheme` object and override colors only necessary colors:
+
+```ts
+import { DefaultKeyboardToolbarTheme } from "react-native-keyboard-controller";
+
+const theme={{
+  ...DefaultKeyboardToolbarTheme,
+  dark: {
+    ...DefaultKeyboardToolbarTheme.dark,
+    primary: "#FFCC00",
+  },
+}}
+```
+
+:::info dark/light theme support
+Don't forget that you need to specify colors for **both** `dark` and `light` theme. The theme will be selected automatically based on the device preferences.
+:::
 
 ## Example
 
+```tsx
+
+```
+
 ## Limitations
 
-- find all fields within ViewController/FragmentActivity
-- order of navigation is defined by view hierarchy (i. e. view-tree)
+- By default `TextInput` search happens within `UIViewController`/`FragmentActivity` (current screen if you are using `react-native-screens`)
+- The order of the navigation is defined by the view hierarchy (commonly referred to as the view-tree).
