--- a/TODO
+++ b/TODO
@@ -13,15 +13,16 @@
 - [x] e2e tests
 - [x] reduce `useColorScheme() || "light";` code duplication
 - [x] an ability to customize arrow/text color
+- [x] memo/callbacks everywhere
 - [ ] set focus to custom input (date picker) - how it should be done? Test on iOS?
 - [ ] unit tests for iOS
 - [ ] customization
-- [ ] memo/callbacks everywhere
 - [ ] improve accessibility (arrows should react on bold/fontSize changes)
 - [ ] an ability to customize text/arrow elements
 - [ ] last input disabled
 - [ ] more effective way for gathering all inputs on screen (now it finds a lot of duplicates)
 - [ ] arrow + ripple effect - incorrect positioning
+- [ ] remove code with `onLayout` + be sure we use `useMemo` in this code wherever we need it
 - [-] unit tests for Android
 
 Major problems (for opening PR):
