feat: customize Done text

--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -53,6 +53,14 @@ This property allows you to show a custom content in the middle of the toolbar. 
 />
 ```
 
+### `doneText`
+
+The property that allows to specify custom text for `Done` button.
+
+```tsx
+<KeyboardToolbar doneText="Close" />
+```
+
 ### `theme`
 
 Prop allowing you to specify the brand colors of your application for `KeyboardToolbar` component. If you want to re-use already platform specific colors you can import `DefaultKeyboardToolbarTheme` object and override colors only necessary colors:
