--- a/TODO
+++ b/TODO
@@ -16,16 +16,16 @@
 - [x] memo/callbacks everywhere
 - [x] js jest tests (to verify mocks)
 - [x] remove code with `onLayout` + be sure we use `useMemo` in this code wherever we need it
+- [x] unit tests for Android
+- [-] an ability to customize text/arrow elements
 - [-] set focus to custom input (date picker) - how it should be done? Test on iOS?
 - [ ] unit tests for iOS
 - [ ] customization
 - [ ] improve accessibility (arrows should react on bold/fontSize changes)
-- [ ] an ability to customize text/arrow elements
 - [ ] last input disabled
 - [ ] more effective way for gathering all inputs on screen (now it finds a lot of duplicates)
 - [ ] arrow + ripple effect - incorrect positioning
 - [ ] iOS -> background should be transparent?
-- [-] unit tests for Android
 
 Major problems (for opening PR):
 
