--- a/TODO
+++ b/TODO
@@ -17,10 +17,10 @@
 - [x] js jest tests (to verify mocks)
 - [x] remove code with `onLayout` + be sure we use `useMemo` in this code wherever we need it
 - [x] unit tests for Android
-- [-] an ability to customize text/arrow elements
+- [x] an ability to customize text/arrow elements
+- [x] customization
 - [-] set focus to custom input (date picker) - how it should be done? Test on iOS?
 - [ ] unit tests for iOS
-- [ ] customization
 - [ ] improve accessibility (arrows should react on bold/fontSize changes)
 - [ ] last input disabled
 - [ ] more effective way for gathering all inputs on screen (now it finds a lot of duplicates)
@@ -36,5 +36,5 @@ Major problems (for opening PR):
 - (x) handle setFocusTo("next") when we select a contact (iOS)
 - (x) write last e2e tests (interaction with AutoFill contacts, conditional rendering)
 - (x) on Android buttons disabling/enabling looks tooo slow - test on a real device + capture performance benchmarks (how much time it takes to go from JS -> native -> JS)
-- enhanced example app
+- (x) enhanced example app
 - port example to fabric
