--- a/TODO
+++ b/TODO
@@ -20,12 +20,14 @@
 - [x] an ability to customize text/arrow elements
 - [x] customization
 - [-] set focus to custom input (date picker) - how it should be done? Test on iOS?
+- [-] improve accessibility (arrows should react on bold/fontSize changes)
 - [ ] unit tests for iOS
-- [ ] improve accessibility (arrows should react on bold/fontSize changes)
 - [ ] last input disabled
 - [ ] more effective way for gathering all inputs on screen (now it finds a lot of duplicates)
 - [ ] arrow + ripple effect - incorrect positioning
-- [ ] iOS -> background should be transparent?
+- [ ] iOS -> background should be transparent/blurred?
+- [ ] apply scale to arrows to check whether there is any missing pixels between two lines/incorrect overlap
+- [ ] customize a11y labels and hints
 
 Major problems (for opening PR):
 
@@ -37,4 +39,4 @@ Major problems (for opening PR):
 - (x) write last e2e tests (interaction with AutoFill contacts, conditional rendering)
 - (x) on Android buttons disabling/enabling looks tooo slow - test on a real device + capture performance benchmarks (how much time it takes to go from JS -> native -> JS)
 - (x) enhanced example app
-- port example to fabric
+- (x) port example to fabric
